2020-08-28  Mark Wielard  <mark@klomp.org>

	* aarch64_init.c (aarch64_init): Hook dynamic_tag_name and
	dynamic_tag_check.
	* aarch64_symbol.c (aarch64_dynamic_tag_name): New function.
	(aarch64_dynamic_tag_check): Likewise.

2020-06-16  Mark Wielard  <mark@klomp.org>

	* common-reloc.c (reloc_nametable): Make zero a 1 char array.
	Initialize it as an array { '\0' }.
	(reloc_type_name): Access zero as an array.

2020-06-10  Mark Wielard  <mark@klomp.org>

	* aarch64_init.c (aarch64_init): Remove ehlen, return eh.
	* alpha_init.c (alpha_init): Likewise.
	* arm_init.c (arm_init): Likewise.
	* bpf_init.c (bpf_init): Likewise.
	* csky_init.c (csky_init): Likewise.
	* i386_init.c (i386_init): Likewise.
	* ia64_init.c (ia64_init): Likewise.
	* m68k_init.c (m68k_init): Likewise.
	* ppc64_init.c (ppc64_init): Likewise.
	* ppc_init.c (ppc_init): Likewise.
	* riscv_init.c (riscv_init): Likewise.
	* s390_init.c (s390_init): Likewise.
	* sh_init.c (sh_init): Likewise.
	* sparc_init.c (sparc_init): Likewise.
	* tilegx_init.c (tilegx_init): Likewise.
	* x86_64_init.c (x86_64_init): Likewise.
	* libebl_CPU.h (init): Adjust EBLHOOK signature.

2019-07-05  Omar Sandoval  <osandov@fb.com>

	* Makefile.am: Replace libcpu_{i386,x86_64,bpf}.a with libcpu.a.
	Replace libcpu.a with libcpu_pic.a.
	Combine libebl_CPU.so modules into libebl_backends{,_pic}.a.

2019-07-13 Mao Han <han_mao@c-sky.com>

	* Makefile.am: Add C-SKY.
	* csky_attrs.c: New file.
	* csky_cfi.c: New file.
	* csky_corenote.c: Likewise.
	* csky_init.c: Likewise.
	* csky_initreg.c: Likewise.
	* csky_regs.c: Likewise.
	* csky_reloc.def: Likewise.
	* csky_symbol.c: Likewise.

2019-06-28  Mark Wielaard  <mark@klomp.org>

	* aarch64_init.c (aarch64_init.c): Remove eh->name;
	* alpha_init.c (alpha_init.c): Remove eh->name;
	* arm_init.c (arm_init.c): Remove eh->name;
	* bpf_init.c (bpf_init.c): Remove eh->name;
	* i386_init.c (i386_init.c): Remove eh->name;
	* ia64_init.c (ia64_init.c): Remove eh->name;