@@ -51,7 +51,7 @@ libebl_a_SOURCES = eblopenbackend.c eblclosebackend.c eblreloctypename.c \
 		   eblbsspltp.c eblretval.c eblreginfo.c eblnonerelocp.c \
 		   eblrelativerelocp.c eblsysvhashentrysize.c eblauxvinfo.c \
 		   eblcheckobjattr.c ebl_check_special_section.c \
-		   ebl_syscall_abi.c eblabicfi.c eblstother.c eblinitreg.c \
+		   eblabicfi.c eblstother.c eblinitreg.c \
 		   ebldwarftoregno.c eblnormalizepc.c eblunwind.c \
 		   eblresolvesym.c eblcheckreloctargettype.c \
 		   ebl_data_marker_symbol.c
